refactor send command