@@ -7,20 +7,17 @@ package io.cosmosoftware.kite.instrumentation;
 import io.cosmosoftware.kite.exception.KiteTestException;
 import io.cosmosoftware.kite.manager.SSHManager;
 import io.cosmosoftware.kite.report.Status;
-import io.cosmosoftware.kite.util.ReportUtils;
 import io.cosmosoftware.kite.util.TestUtils;
-import net.bytebuddy.implementation.bytecode.Throw;
 import org.apache.log4j.Logger;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
 import javax.json.JsonArray;
 import javax.json.JsonObject;
-import java.awt.*;
-import java.net.URI;
+import java.io.InputStream;
+import java.net.URL;
+import java.net.URLConnection;
 import java.util.ArrayList;
-
-import static io.cosmosoftware.kite.util.TestUtils.getPrivateIp;
 
 public class Scenario {
 
@@ -30,13 +27,13 @@ public class Scenario {
   private final String network;
   private final String gateway;
   private ArrayList<Integer> clientIds = new ArrayList<>();
-  private final Networks networks;
+  private final NetworkProfileHashMap networkProfileHashMap;
   private final Logger logger;
 
-  public Scenario(JsonObject jsonObject, Logger logger, Networks networks) throws Exception {
+  public Scenario(JsonObject jsonObject, Logger logger, NetworkProfileHashMap networkProfileHashMap) throws Exception {
     this.logger = logger;
     String missingKey="";
-    this.networks = networks;
+    this.networkProfileHashMap = networkProfileHashMap;
     try {
       missingKey = "type";
       this.type = jsonObject.getString("type");
@@ -56,7 +53,7 @@ public class Scenario {
       }
       missingKey = "network";
       this.network = jsonObject.getString("network");
-      this.command =  this.networks.get(this.network).getProfile().getCommand();
+      this.command =  this.networkProfileHashMap.get(this.network).getProfile().getCommand().trim();
       missingKey = "name";
       name = jsonObject.getString("name");
     } catch (Exception e) {
@@ -86,40 +83,20 @@ public class Scenario {
 
   public String sendCommand(WebDriver webDriver, Instrumentation instrumentation, String remoteAddress, String GridId, String instrumentUrl) {
     StringBuilder result = new StringBuilder();
-    result.append("Running ").append(this.command).append("on ");
+    result.append("Running ").append(this.command).append(" on ");
     if (this.type.equals("gateway")) {
       result.append(this.gateway);
       logger.info(result.toString());
-      if (instrumentUrl == null) {
-        String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&gw=" + this.gateway + "&command=" + this.command;
-        result.append("via KiteServer ").append(KiteServerCommand(url));
-      } else if (instrumentUrl.endsWith(".json")) {
-        Instance instance = instrumentation.get(gateway);
-        result.append(" via ssh ").append(sshCommand(instance, command));
-      } else if (instrumentUrl.startsWith("http://")) {
-        String url = instrumentUrl + GridId + "&gw=" + this.gateway + "&command=" + this.command;
-        result.append("via KiteServer ").append(KiteServerCommand(url));
-      } else {
-        result.append(" failed, check instrumentUrl !");
-      }
+      result.append(this.runCommandGateway(this.command, GridId, instrumentUrl, instrumentation));
     }
     if (this.type.equals("client")) {
-      logger.info("!!! HUB IP : " + remoteAddress + " !!!");
       String sessionId = ((RemoteWebDriver) webDriver).getSessionId().toString();
       String nodeIp = TestUtils.getPrivateIp(remoteAddress, sessionId);
       result.append("client ").append(nodeIp);
       if (((RemoteWebDriver) webDriver).getCapabilities().getPlatform().toString().equalsIgnoreCase("LINUX")) {
-        if (instrumentUrl == null) {
-          String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&ip=" + nodeIp + "&command=" + this.command;
-          result.append(KiteServerCommand(url));
-        } else if (instrumentUrl.startsWith("http://")) {
-          String url = instrumentUrl + GridId + "&ip=" + nodeIp + "&command=" + this.command;
-          result.append("via KiteServer ").append(KiteServerCommand(url));
-        } else {
-          result.append(" failed, check instrumentUrl !");
-        }
+        result.append(this.runCommandClient(this.command, GridId, instrumentUrl, nodeIp));
       } else {
-        result.append("Sorry node ").append(nodeIp).append(" is not Linux");
+        result.append("Node ").append(nodeIp).append(" is not Linux");
       }
     }
     return result.toString();
@@ -128,41 +105,21 @@ public class Scenario {
   public String cleanUp(WebDriver webDriver, Instrumentation instrumentation, String remoteAddress, String GridId, String instrumentUrl) {
     StringBuilder result = new StringBuilder();
     String inter = "enp0s8";
-    String cleanUpCommand = "sudo tc qdisc del dev " + inter + " root || true && sudo tc qdisc del dev " + inter + " ingress || true && sudo tc qdisc del dev ifb0 root ";
-    result.append("Doing CleanUp for ").append(cleanUpCommand).append( "on ");
+    String cleanUpCommand = "sudo tc qdisc del dev " + inter + " root || true && sudo tc qdisc del dev " + inter + " ingress || true && sudo tc qdisc del dev ifb0 root ||true ";
+    result.append("Doing CleanUp for ").append(this.command).append( " on ");
     if ( this.type.equals("gateway")) {
       result.append(this.gateway);
       logger.info(result.toString());
-      if ( instrumentUrl == null ) {
-        String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&gw=" + this.gateway + "&command=" + cleanUpCommand;
-        result.append("via KiteServer ").append(KiteServerCommand(url));
-      } else if (instrumentUrl.endsWith(".json")) {
-        Instance instance = instrumentation.get(gateway);
-        result.append(" via ssh ").append(sshCommand(instance, cleanUpCommand));
-      } else if (instrumentUrl.startsWith("http://")) {
-        String url = instrumentUrl + GridId + "&gw=" + this.gateway + "&command=" + cleanUpCommand;
-        result.append("via KiteServer ").append(KiteServerCommand(url));
-      } else {
-        result.append(" FAILED, check instrumentUrl !");
-      }
+      result.append(this.runCommandGateway(cleanUpCommand, GridId, instrumentUrl, instrumentation));
     }
     if ( this.type.equals("client")) {
-      logger.info("!!! HUB IP : " + remoteAddress + " !!!");
       String sessionId = ((RemoteWebDriver) webDriver).getSessionId().toString();
       String nodeIp = TestUtils.getPrivateIp(remoteAddress, sessionId);
       result.append("client ").append(nodeIp);
       if (((RemoteWebDriver) webDriver).getCapabilities().getPlatform().toString().equalsIgnoreCase("LINUX")) {
-        if ( instrumentUrl == null ) {
-          String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&ip=" + nodeIp + "&command=" + cleanUpCommand;
-          result.append(KiteServerCommand(url));
-        } else if (instrumentUrl.startsWith("http://")) {
-          String url = instrumentUrl + GridId + "&ip=" + nodeIp + "&command=" + cleanUpCommand;
-          result.append("via KiteServer ").append(KiteServerCommand(url));
-        } else {
-          result.append(" FAILED, check instrumentUrl !");
-        }
+        result.append(this.runCommandClient(cleanUpCommand, GridId, instrumentUrl, nodeIp));
       } else {
-        result.append("Sorry node ").append(nodeIp).append(" is not Linux");
+        result.append(" FAILED, check instrumentUrl !");
       }
     }
     return result.toString();
@@ -188,14 +145,44 @@ public class Scenario {
   private String KiteServerCommand(String url) {
     String result;
     try {
-      Desktop desktop = java.awt.Desktop.getDesktop();
-      URI oURL = new URI(url);
-      desktop.browse(oURL);
-      result = "SUCCEEDED";
+      URLConnection connection = new URL(url).openConnection();
+      connection.setRequestProperty("Accept-Charset", "UTF-8");
+      InputStream response = connection.getInputStream();
+      result = "SUCCEEDED and got response : " + response.toString();
     } catch (Exception e) {
       result = "thrown an ERROR";
     }
     return result;
   }
 
+  private String runCommandGateway(String command, String GridId, String instrumentUrl, Instrumentation instrumentation) {
+    StringBuilder result = new StringBuilder();
+    if (instrumentUrl == null) {
+      String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&gw=" + this.gateway + "&command=" + command;
+      result.append("via KiteServer ").append(this.KiteServerCommand(url));
+    } else if (instrumentUrl.endsWith(".json")) {
+      Instance instance = instrumentation.get(this.gateway);
+      result.append(" via ssh ").append(this.sshCommand(instance, command));
+    } else if (instrumentUrl.startsWith("http://")) {
+      String url = instrumentUrl + GridId + "&gw=" + this.gateway + "&command=" + command;
+      result.append("via KiteServer ").append(this.KiteServerCommand(url));
+    } else {
+      result.append(" failed, check instrumentUrl !");
+    }
+    return result.toString();
+  }
+
+  private String runCommandClient(String command, String GridId, String instrumentUrl, String nodeIp) {
+    StringBuilder result = new StringBuilder();
+    if (instrumentUrl == null) {
+      String url = "http://localhost:8080/KITEServer/command?id=" + GridId + "&ip=" + nodeIp + "&command=" + command;
+      result.append(this.KiteServerCommand(url));
+    } else if (instrumentUrl.startsWith("http://")) {
+      String url = instrumentUrl + GridId + "&ip=" + nodeIp + "&command=" + command;
+      result.append("via KiteServer ").append(this.KiteServerCommand(url));
+    } else {
+      result.append(" FAILED, check instrumentUrl !");
+    }
+    return result.toString();
+  }
 }
